--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -4,10 +4,17 @@
   margin: auto 0.7rem auto 0.6rem;
 }
 
+.nav-item {
+  cursor: pointer;
+}
+
 .label-search {
   width: 43%;
   pointer-events: none;
 }
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .navbar-logo {
