--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,23 @@
-.navbar-logo {
+.navbar-logo,
+.label-search {
   height: 2.8rem;
   pointer-events: none;
-  margin: auto 0.7rem auto 0.6rem;
 }
-
 .nav-item {
   cursor: pointer;
 }
-
-.label-search {
-  width: 43%;
-  pointer-events: none;
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 4;
 }
-
-
 
 
 @media (prefers-reduced-motion: no-preference) {
